update package scripts

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "NODE_ENV=development node ./server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start",
+    "deploy-staging": "NODE_ENV=staging next build &&    NODE_ENV=staging node ./server.js",
+    "deploy-production": "NODE_ENV=production next build && NODE_ENV=production node ./server.js"
   },
   "dependencies": {
     "next": "9.3.4",
